--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -14,7 +14,8 @@
 \usepackage{colortbl}
 \usepackage{pinyin}
 \usepackage{algorithm,algorithmic}
-\usepackage{url}
+\usepackage{hyperref}
+\usepackage{listings}
 
 \usetheme{JuanLesPins}
 \useoutertheme{infolines}
@@ -22,11 +23,41 @@
 %\usetheme{Boadilla}
 \setbeamerfont{structure}{size*={11}{11}}
 
+\lstset{
+         basicstyle=\footnotesize\ttfamily, % Standardschrift
+         %numbers=left,               % Ort der Zeilennummern
+         numberstyle=\tiny,          % Stil der Zeilennummern
+         %stepnumber=2,               % Abstand zwischen den Zeilennummern
+         numbersep=5pt,              % Abstand der Nummern zum Text
+         tabsize=2,                  % Groesse von Tabs
+         extendedchars=true,         %
+         breaklines=true,            % Zeilen werden Umgebrochen
+         keywordstyle=\color{red},
+ %           frame=b,         
+ %        keywordstyle=[1]\textbf,    % Stil der Keywords
+ %        keywordstyle=[2]\textbf,    %
+ %        keywordstyle=[3]\textbf,    %
+ %        keywordstyle=[4]\textbf,   \sqrt{\sqrt{}} %
+ %        stringstyle=\color{white}\ttfamily, % Farbe der String
+         showspaces=false,           % Leerzeichen anzeigen ?
+         showtabs=false,             % Tabs anzeigen ?
+         xleftmargin=17pt,
+         xrightmargin=17pt,
+         framexleftmargin=5pt,
+         framexrightmargin=5pt,
+         framexbottommargin=4pt,
+         showstringspaces=false      % Leerzeichen in Strings anzeigen ?        
+ }
+
+\lstdefinestyle{terminal}
+{
+    backgroundcolor=\color{black},
+    basicstyle=\scriptsize\color{white}\ttfamily
+}
+
 \begin{document}
 \begin{CJK}{UTF8}{gbsn}
 
-
-\section{Introduction}
 
 %--- Page de titre ---
 \title{Spark Hands On}
@@ -42,6 +73,72 @@
   \frametitle{Content}
   \tableofcontents[hideallsubsections]
 \end{frame}
+
+\section{Prerequisite}
+
+%--- Prerequisite for the machine ---
+\begin{frame}
+  \frametitle{Machine Prerequisite}
+
+  \begin{block}{You should have a machine with}
+    \begin{itemize}
+      \item JDK 6+ (this hands on was developed using Oracle JDK 8) with Scala 2.10+
+      \item SBT 13+
+      \item Git
+      \item An IDE with SBT/Scala support (for instance IDEA IntelliJ with SBT and Scala plugins)
+      \item Downloaded Spark 1.3.1 prebuilt for Hadoop 2.6 from \href{http://www.apache.org/dyn/closer.cgi/spark/spark-1.3.1/spark-1.3.1-bin-hadoop2.6.tgz}{official Apache Spark site}
+    \end{itemize}
+  \end{block}
+
+  \begin{block}{You should}
+    \begin{itemize}
+      \item Know Scala basis
+      \item Be at ease with Scala's iterables transformations (map, flatmap, fold)
+      \item Be at ease with higher order functions
+    \end{itemize}
+  \end{block}
+
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{First Spark Run}
+
+  \begin{block}{Perform following commands}
+    \begin{lstlisting}[language=bash, style=terminal]
+git clone https://github.com/vincentdoba/spark-hands-on.git
+cd spark-hands-on
+sbt "run-main psug.hands.on.prerequisite.WordCount README.md" 
+    \end{lstlisting}
+  \end{block}
+
+  \begin{block}{You should obtain}
+    \begin{lstlisting}[language=bash, style=terminal]
+[info] Running psug.hands.on.prerequisite.WordCount README.md
+[error] 15/05/08 17:37:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
+[info] (,48)
+[info] (*,24)
+[info] (####,16)
+[info] (of,14)
+[info] (the,11)
+[info] (###,10)
+[info] (Exercise,8)
+[info] (Description,8)
+[info] (Notions,8)
+[info] (a,8)
+[success] Total time: 25 s, completed 8 mai 2015 17:37:39
+    \end{lstlisting}
+  \end{block}
+
+\end{frame}
+
+\section{Exercise 1 : Spark basis (SparkContext, RDD, Transformation, Action)}
+\section{Exercise 2 : Key/Values RDD, File Loading}
+\section{Exercise 3 : Spark SQL Context, JSON Loading, DataFrames}
+\section{Exercise 4 : Transformations/Actions on DataFrames, Join}
+\section{Exercise 5 : Transformations/Actions on DataFrames}
+\section{Exercise 6 : Saving JSON file}
+\section{Exercise 7 : Machine Learning}
+
 
 \end{CJK}
 \end{document}
