--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -17,6 +17,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{caption}
+\usepackage{xspace}
 
 \usetheme{JuanLesPins}
 \useoutertheme{infolines}
@@ -95,6 +96,8 @@
   \tableofcontents[hideallsubsections]
 \end{frame}
 
+\AtBeginSection{\frame{\sectionpage}}
+
 \section{Prerequisite}
 
 %--- Prerequisite for the machine ---
@@ -113,7 +116,7 @@
 
   \begin{block}{You should}
     \begin{itemize}
-      \item Know Scala basis
+      \item K'now Scala basis
       \item Be at ease with Scala's iterables transformations (map, flatmap, fold)
       \item Be at ease with higher order functions
     \end{itemize}
@@ -257,9 +260,48 @@ sparkContext.stop()
 
 \begin{frame}
 
-  \frametitle{New Transformations}
+  \frametitle{New Transformations and Actions}
 
-  
+  \begin{block}{Transformations}
+    \begin{center}
+      \begin{tabular}{|p{2.1cm}|p{3.5cm}|p{5cm}|}
+        \hline 
+        \rowcolor{gray} \textbf{Transformation} & \textbf{Usage} & \textbf{Description} \\ \hline
+        \textbf{union} & \textit{rdd1.union(rdd2)} & merge the two rdds \\ \hline
+        \textbf{distinct} & \textit{rdd1.distinct()} & remove duplicates from rdd \\ \hline
+        \textbf{subtract} & \textit{rdd1.substract(rdd2)} & remove values from rdd2 of rdd1 \\ \hline
+        \textbf{map} & \textit{rdd1.map(f: (T) =\textgreater\xspace U)} & apply function f to elements of rdd1 \\ \hline
+      \end{tabular}
+    \end{center}
+  \end{block}
+
+  \begin{block}{Actions}
+    \begin{center}
+      \begin{tabular}{|p{2.1cm}|p{3.5cm}|p{5cm}|}
+        \hline 
+        \rowcolor{gray} \textbf{Action} & \textbf{Usage} & \textbf{Description} \\ \hline
+        \textbf{sum} & \textit{rdd1.sum()} & sum the elements of RDD \\ \hline
+      \end{tabular}
+    \end{center}
+  \end{block}
+
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Command and Result}
+
+  \begin{block}{Command}
+    \begin{lstlisting}[language=bash, style=terminal]
+sbt "run-main psug.hands.on.exercise01.SumOfSquaresOfNonPrimeNumbers"
+    \end{lstlisting}
+  \end{block}
+
+  \begin{block}{Result}
+    \begin{lstlisting}[language=bash, style=terminal]
+[info] The sum of square of numbers that are not prime and are under 100 is 272554.0
+[success] Total time: 9 s, completed 8 mai 2015 21:23:22
+    \end{lstlisting}
+  \end{block}
 
 \end{frame}
 
