--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -117,7 +117,7 @@
 
   \begin{block}{You should}
     \begin{itemize}
-      \item K'now Scala basis
+      \item Know Scala basis
       \item Be at ease with Scala's iterables transformations (map, flatmap, fold)
       \item Be at ease with higher order functions
     \end{itemize}
