--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -128,7 +128,7 @@
   \begin{block}{You should}
     \begin{itemize}
       \item Know Scala basis
-      \item Be at ease with Scala's iterables transformations (map, flatmap, fold)
+      \item Be at ease with Scala iterables transformations (map, flatmap, fold)
       \item Be at ease with higher order functions
     \end{itemize}
   \end{block}
