[presentation] add data files description for exercise 4

--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -606,6 +606,34 @@ sbt "run-main psug.hands.on.exercise03.TotalPopulation"
 
 \end{frame}
 
+\begin{frame}[fragile]
+  \frametitle{Data files}
+
+  \begin{block}{demographie\_par\_commune.json File}
+    \begin{verbatim}
+{[...],"Departement":"01",[...],"Population":784,"Superficie":16,[...]}
+{[...],"Departement":"01",[...],"Population":221,"Superficie":9,[...]}
+{[...],"Departement":"01",[...],"Population":13835,"Superficie":25,[...]}
+{[...],"Departement":"01",[...],"Population":1616,"Superficie":16,[...]}
+{[...],"Departement":"01",[...],"Population":116,"Superficie":6,[...]}
+...
+    \end{verbatim}
+  \end{block}
+
+  \begin{block}{departements.txt File}
+    \begin{verbatim}
+Ain,01
+Aisne,02
+Allier,03
+Alpes-de-Haute-Provence,04
+Hautes-Alpes,05
+...
+    \end{verbatim}
+  \end{block}
+
+
+\end{frame}
+
 
 
 \section{Exercise 5 : Transformations/Actions on DataFrames}
